--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -91,7 +91,7 @@
  <!--beginning of form-->
     <section class="page-section cta">
     <div class="container" >
-      <form method='post' action='<?php createNewUser() ?>' name='loginForm'>
+      <form method='post' action='<?php ConnectDatabase() ?>' name='loginForm'>
         <input id="email" type="email" placeholder="Enter email address" required value="carla.griffiths.16@ucl.ac.uk">
         <br> <label for="firstname">First Name: </label> <br>
         <input id="firstname" type="text" placeholder="Enter First Name:" required value="Carla">
