--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -56,7 +56,7 @@
           </ul>
           <--!beginning of search bar>
           <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search" id="search bar" onsubmit="Regurgitate(); return false">
+            <form class="navbar-form" role="search" id="search bar" action='dataphp/searchSakila.php'>
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                 <div class="input-group-btn">
@@ -91,7 +91,19 @@
  <!--beginning of form-->
     <section class="page-section cta">
     <div class="container" >
-      <form method='post' action='<?php ConnectDatabase() ?>' name='loginForm'>
+      <form method='post' action='dataphp/newusercheck.php' name='newUserForm'>
+        <label>First Name:</label>
+        <input type='text' name='firstname' size='30'>
+        <label>Family Name:</label>
+        <input type='text' name='lastname' size='30'>
+
+        <label>Email:</label>
+        <input type='email' name='email' size='30'>
+        <p><input type='submit' value='Create New User'></p>
+      </form>
+
+
+      <form method='post' action='dataphp/newusercheck.php' name='LoginForm'>
         <input id="email" type="email" placeholder="Enter email address" required value="carla.griffiths.16@ucl.ac.uk">
         <br> <label for="firstname">First Name: </label> <br>
         <input id="firstname" type="text" placeholder="Enter First Name:" required value="Carla">
