--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -91,7 +91,7 @@
  <!--beginning of form-->
     <section class="page-section cta">
     <div class="container" >
-      <form method='post' action='dataphp/newusercheck.php' name='newUserForm'>
+      <!--<form method='post' action='dataphp/newusercheck.php' name='newUserForm'>
         <label>First Name:</label>
         <input type='text' name='firstname' size='30'>
         <label>Family Name:</label>
@@ -100,8 +100,7 @@
         <label>Email:</label>
         <input type='email' name='email' size='30'>
         <p><input type='submit' value='Create New User'></p>
-      </form>
-
+      </form>-->
 
       <form method='post' action='dataphp/newusercheck.php' name='LoginForm'>
         <input id="email" type="email" placeholder="Enter email address" required value="carla.griffiths.16@ucl.ac.uk">
